Finished adaptive design

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
   <title>Oculus</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
   <header class="header">
     <div class="container">
       <nav class="nav">
+        <button class="menu-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <ul class="menu">
           <li class="menu__list">
             <a href="#" class="menu__link">SHOP</a>
@@ -80,7 +86,7 @@
               </div>
             </div>
             <div class="tabs__content-item" id="content-2">
-              <img class="tabs__content-img" src="images/content-bg.jpg" alt="Image">
+              <img class="tabs__content-img" src="images/content.jpg" alt="Image">
               <div class="tabs__content-box">
                 <h3>Controls</h3>
                 <p>With 1832 x 1920 pixels per eye, everything from multiplayer games and productivity apps to 360 0
@@ -104,7 +110,7 @@
               </div>
             </div>
             <div class="tabs__content-item" id="content-4">
-              <img class="tabs__content-img" src="images/content-bg.jpg" alt="Image">
+              <img class="tabs__content-img" src="images/content.jpg" alt="Image">
               <div class="tabs__content-box">
                 <h3>Set up your play area</h3>
                 <p>With 1832 x 1920 pixels per eye, everything from multiplayer games and productivity apps to 360 0
@@ -128,7 +134,7 @@
               </div>
             </div>
             <div class="tabs__content-item" id="content-6">
-              <img class="tabs__content-img" src="images/content-bg.jpg" alt="Image">
+              <img class="tabs__content-img" src="images/content.jpg" alt="Image">
               <div class="tabs__content-box">
                 <h3>Headset casting</h3>
                 <p>With 1832 x 1920 pixels per eye, everything from multiplayer games and productivity apps to 360 0
@@ -337,7 +343,7 @@
             <a class="menu__link" href="#">CONTACT US</a>
           </li>
         </ul>
-        <a class="social" href="#">
+        <a class="logo" href="#">
           <img src="images/logo.svg" alt="logo">
         </a>
         <ul class="social">
