--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
 </head>
 
 <body>
@@ -32,10 +33,10 @@
           </li>
         </ul>
         <a href="#" class="logo">
-          <img src="images/logo.svg" alt="logo">
+          <img src="images/icons/logo.svg" alt="logo">
         </a>
         <a href="#" class="basket basket--on">
-          <img src="images/basket.svg" alt="logo">
+          <img src="images/icons/basket.svg" alt="logo">
           <!-- <span>1</span> -->
         </a>
       </nav>
@@ -81,7 +82,7 @@
                   videos look beyond incredible</p>
               </div>
               <div class="video">
-                <button class="video__btn"> <img src="images/play.svg" alt="Play"></button>
+                <button class="video__btn"> <img src="images/icons/play.svg" alt="Play"></button>
                 <span>Watch the video</span>
               </div>
             </div>
@@ -93,7 +94,7 @@
                   videos look beyond incredible</p>
               </div>
               <div class="video">
-                <button class="video__btn"> <img src="images/play.svg" alt="Play"></button>
+                <button class="video__btn"> <img src="images/icons/play.svg" alt="Play"></button>
                 <span>Watch the video</span>
               </div>
             </div>
@@ -105,7 +106,7 @@
                   videos look beyond incredible</p>
               </div>
               <div class="video">
-                <button class="video__btn"> <img src="images/play.svg" alt="Play"></button>
+                <button class="video__btn"> <img src="images/icons/play.svg" alt="Play"></button>
                 <span>Watch the video</span>
               </div>
             </div>
@@ -117,7 +118,7 @@
                   videos look beyond incredible</p>
               </div>
               <div class="video">
-                <button class="video__btn"> <img src="images/play.svg" alt="Play"></button>
+                <button class="video__btn"> <img src="images/icons/play.svg" alt="Play"></button>
                 <span>Watch the video</span>
               </div>
             </div>
@@ -129,7 +130,7 @@
                   videos look beyond incredible</p>
               </div>
               <div class="video">
-                <button class="video__btn"> <img src="images/play.svg" alt="Play"></button>
+                <button class="video__btn"> <img src="images/icons/play.svg" alt="Play"></button>
                 <span>Watch the video</span>
               </div>
             </div>
@@ -141,7 +142,7 @@
                   videos look beyond incredible</p>
               </div>
               <div class="video">
-                <button class="video__btn"> <img src="images/play.svg" alt="Play"></button>
+                <button class="video__btn"> <img src="images/icons/play.svg" alt="Play"></button>
                 <span>Watch the video</span>
               </div>
             </div>
@@ -345,22 +346,22 @@
           </li>
         </ul>
         <a class="logo" href="#">
-          <img src="images/logo.svg" alt="logo">
+          <img src="images/icons/logo.svg" alt="logo">
         </a>
         <ul class="social">
           <li class="social__item">
             <a class="social__link" href="#">
-              <img src="images/youtube.svg" alt="" class="">
+              <img src="images/icons/youtube.svg" alt="" class="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="#">
-              <img src="images/facebook.svg" alt="" class="">
+              <img src="images/icons/facebook.svg" alt="" class="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="#">
-              <img src="images/instagram.svg" alt="" class="">
+              <img src="images/icons/instagram.svg" alt="" class="">
             </a>
           </li>
         </ul>
